@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.2-2
-Date: 2015-10-14
+Date: 2015-10-16
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
